fix: corrige erros de build e otimiza configurações
- Remove swcMinify que não é mais suportado

- Adiciona critters para otimização de CSS

- Ajusta configurações do Next.js para melhor performance

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngneat/falso": "^7.3.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
+    "critters": "^0.0.25",
     "next": "^15.3.2",
     "next-sitemap": "^4.2.3",
     "react": "^19.1.0",
