feat: configurações de otimização e performance
- Adiciona configurações de cache para assets estáticos
- Implementa otimização de imagens com WebP
- Configura headers HTTP para melhor performance
- Adiciona suporte a Bundle Analyzer
- Otimiza imports de pacotes específicos
- Configura build e deploy na Vercel
- Implementa políticas de segurança para SVGs
- Define padrões para imagens remotas

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,28 @@
 {
   "installCommand": "pnpm install",
   "buildCommand": "pnpm run build",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "headers": [
+    {
+      "source": "/assets/icons/(.*)",
+      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+    },
+    {
+      "source": "/assets/images/(.*)",
+      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+    },
+    {
+      "source": "/assets/profiles/(.*)",
+      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+    },
+    {
+      "source": "/favicon.ico",
+      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+    },
+    {
+      "source": "/_vercel/insights/script.js",
+      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+    }
+  ]
 }
