--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@types/webpack-bundle-analyzer": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
     "depcheck": "^1.4.7",
     "eslint": "^9.27.0",
     "eslint-config-next": "15.3.2",
