chore: otimiza bundle removendo suporte a browsers legados
- Atualiza configuração do Browserslist para suportar apenas navegadores modernos
- Remove polyfills desnecessários para features já suportadas nativamente
- Garante que o build não transpile mais para ES5
- Reduz o tamanho do bundle JS e melhora performance (LCP/FCP)

--- a/package.json
+++ b/package.json
@@ -62,5 +62,11 @@
     "vercel": "^42.2.0",
     "webpack-bundle-analyzer": "^4.10.2"
   },
-  "packageManager": "pnpm@10.10.0"
+  "packageManager": "pnpm@10.10.0",
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Edge versions",
+    "last 2 Safari versions"
+  ]
 }
