teste: teste dependencia removida do carrossel pocivel polyfills desnecessarios

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "next-sitemap": "^4.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-query": "^3.39.3",
-    "react-responsive-carousel": "^3.2.23"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
